2005-02-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-pdfpc-helper.py: new file. Invoke different
	editors based on EDITOR setting.

2005-02-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/*: Oops, more grand 2005 replace bits.

2005-02-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ps/music-drawing-routines.ps: new routine: insert PDF mark

	* scm/output-ps.scm (grob-cause): point & click support for
	PostScript

2005-02-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/input-scheme.cc (LY_DEFINE): rename to
	ly:input-file-line-column

2005-02-26  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/examples.itely: small fix from Steve Doonan.

	* Documentation/user/scheme-tutorial.itely: small fix from Steve Doonan.

	* Documentation/user/notation.itely: revamped Polyphony section
	from Yuval Harel.  Thanks!

	* THANKS: added Yuval Harel.

	* Documentation/user/{various}: inserted two spaces after a period.

	* Documentation/user/lilypond.tely: added framework for reorg.

	* Documentation/user/basic-notation.itely, instrument-notation.itely,
	advanced-notation.itely, global.itely: new files, placeholder for
	future reorg.

2005-02-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/lilypond-book.itely (Music fragment options):
	doc fontload.

	* Documentation/user/changing-defaults.itely (Text encoding): add
	fontload option to utf8 include

	* scripts/lilypond-book.py (compose_ly): add fontload option

	* scm/framework-eps.scm (dump-stencils-as-EPSes): add
	force-eps-font-include option.

	* ly/chord-modifiers-init.ly (blackTriangleMarkup): reinstate
	black triangle

	* Documentation/user/invoking.itely (Editor support): remove
	lilypond-latex section.

	* scripts/lilypond-latex.py (Module): remove script.

	* cygwin/lily-wins.py (stat): write to .lylog, so as not to
	overwrite .log. 

	* lily/main.cc: remove -m, --no-layout

	* flower/include/libc-extension.hh: add ALIAS_FILE_TO_FILECOOKIE